Decoding NetFlow option data record incorrectly
This issue was migrated from bug 4942 in our old bug tracker.
Original bug information:
Reporter: Hitoshi Irino
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
packet-netflow.c.scope.patch: patch for decoding NetFlow option data record
packet-netflow.c.scope.patch: patch for decoding NetFlow option data record
c36_nfv9opt.pcap: NetFlow v9 option record from cisco3600