From Hitoshi Irino via bug 4942: 1. fix the bug in dissect_v9_pdu. (The bug is introduced in r32627, It's my fault, I'm sorry.) When option data record is decoded, unpatched dissect_v9_pdu decode only scope fields, it does not decode following data fields. And it runs in endless loop when length of a scope filed is 0. This patch solve these problem. 2. defines some value_strings for some fields. 3. updates URLs in comment.

svn path=/trunk/; revision=33348